# ingestion_pipeline

./: README.md
fetch_flight_data/: pyproject.toml
fetch_flight_data/fetch_flight_data/: ingestion.py
