[tool.poetry]
name = "fetch-flight-data"
version = "0.1.0"
description = ""
authors = ["prnv-dataguy <pranavdataguy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
kaggle = "^1.6.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
